# QuadTreeN

./: .gitignore  CMakeLists.txt  CompTwoFunc.cpp  CompTwoFunc.h  Forest.cpp  Forest.h  Function.cpp  Function.h  Gaussian.h  GaussianN.cpp  GaussianN.h  GaussianQuadrature.cpp  GraphicsMechanics.cpp  GraphicsMechanics.h  InterpolatedFunction.cpp  InterpolatedFunction.h  LegendrePolynomial.cpp  Node.cpp  Node.h  Point.cpp  Point.h  Pointint.cpp  Pointint.h  QuadTree.cpp  QuadTree.h  RectangleN.cpp  RectangleN.h  function.csv  main.cpp  params.csv  tripleVect.h  twoVects.cpp  twoVects.h
.VSCodeCounter/: details.md  results.csv  results.txt
